# scai_ia_geopolitique

./: .gitignore  1_warm_up.ipynb  2_embedding.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  pyproject.toml
