[project]
name = "scai-ia-geopolitique"
version = "0.1.0"
description = ""
authors = [
    {name = "racousin",email = "racousin@student.42.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "transformers (>=4.52.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
